--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "googleapis": "^27.0.0",
     "rxjs": "^5.5.6",
     "yarn": "^1.5.1",
     "zone.js": "^0.8.19"
