--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "azure": "^2.2.1-preview",
     "core-js": "^2.4.1",
+    "dateformat": "^3.0.3",
     "express": "^4.16.3",
     "googleapis": "^27.0.0",
+    "multer": "^1.3.0",
     "rxjs": "^5.5.6",
     "yarn": "^1.5.1",
     "zone.js": "^0.8.19"
