--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.3.0",
     "multer-azure-storage": "^0.2.0",
     "rxjs": "^5.5.6",
+    "yarn": "^1.5.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
