--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "googleapis": "^27.0.0",
     "multer": "^1.3.0",
     "multer-azure-storage": "^0.2.0",
+    "nodemailer": "^6.3.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
